# solana-privacy-hack-2026

./: .gitignore  Anchor.toml  README.md  package.json
app/: package.json  tailwind.config.js
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: DepositModal.tsx  HeroSection.tsx  Navbar.tsx  SwapInterface.tsx  VaultCard.tsx  WalletProvider.tsx  WithdrawModal.tsx  index.ts
app/src/hooks/: useGhostbuys.ts
app/src/lib/: constants.ts  index.ts  privacy-cash.ts  shadowwire.ts  utils.ts
programs/ghostbuys/: Cargo.toml
programs/ghostbuys/src/: lib.rs
