[package]
name = "ghostbuys"
version = "0.1.0"
description = "Private memecoin trading on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ghostbuys"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "token_2022"] }
solana-program = "1.18"
spl-token = "4.0"
spl-token-2022 = "3.0"
spl-token-confidential-transfer-proof-generation = "0.1"
